--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
 }
 
 .App-logo {
@@ -18,8 +17,8 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +34,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+input {
+  width: 30vw;
+  font-size: 1.5rem;
+  border: 0;
+  border-bottom: 1px solid white;
+  color: white;
+  background-color: transparent;
+  padding: 10px;
+  margin-left: 30px;
+}
+
+.box {
+  float: left;
+  border : 1px solid red;
+  min-width: 300px;
+  min-height: 40px;
+  margin-bottom: 30px;
+  padding: 30px;
+}
+
+button {
+  margin: 10px 30px;
 }
